fixed error with page overflowing to the top, plus some styling fix

--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@
 @tailwind utilities;
 
 :root {
-  height: 100%;
+  height: 100vh;
   background-color: rgb(224 242 254);
+
 }
